# neural-net

./: .gitignore  README.md  benchmark  neural-net.cabal  stack.yaml
app/: Main.hs
bench/: Main.hs
src/: Activation.hs  CostFunction.hs  DynamicLayers.hs  Layer.hs  LayerCombiners.hs  Loader.hs  Matrix.hs  MnistLoader.hs  Network.hs  NeuralNet.hs  StaticLayers.hs  TrainingSet.hs  Types.hs  Util.hs
src/Data/Array/Accelerate/: NeuralNet.hs
src/Data/Array/Accelerate/NeuralNet/: Activation.hs  CostFunction.hs  Layer.hs  Loader.hs  Util.hs
src/Data/Array/Accelerate/NeuralNet/Layer/: DynamicLayers.hs  LayerCombiners.hs  StaticLayers.hs  Types.hs
test/: NetSpec.hs
