name:                neural-net
version:             0.1.0.0
synopsis:            Fast Artificial Neural Network library
description:         Please see README.md
homepage:            https://github.com/BlackPinInc/neural-net#readme
license:             BSD3
license-file:        LICENSE
author:              Samuel Gervais
maintainer:          samgervais512@gmail.com
copyright:           2016 BlackPin Inc
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network, MnistLoader, TrainingSet
  build-depends:       base >= 4.7 && < 5,
                       matrix,
                       vector,
                       bytestring,
                       binary,
                       normaldistribution,
                       random
  default-language:    Haskell2010

executable neural-net
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , neural-net
  default-language:    Haskell2010

test-suite neural-net-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , neural-net
                     , hspec
                     , matrix
                     , vector
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BlackPinInc/neural-net
