name:                neural-net
version:             0.1.0.0
synopsis:            Fast Artificial Neural Network library
description:         Please see README.md
homepage:            https://github.com/BlackPinInc/neural-net#readme
license:             BSD3
license-file:        LICENSE
author:              Samuel Gervais
maintainer:          samgervais512@gmail.com
copyright:           2016 BlackPin Inc
category:            AI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Array.Accelerate.NeuralNet
  other-modules:       Data.Array.Accelerate.NeuralNet.Layer
                     , Data.Array.Accelerate.NeuralNet.Loader
                     , Data.Array.Accelerate.NeuralNet.Activation
                     , Data.Array.Accelerate.NeuralNet.CostFunction
                     , Data.Array.Accelerate.NeuralNet.Util
                     , Data.Array.Accelerate.NeuralNet.Layer.Types
                     , Data.Array.Accelerate.NeuralNet.Layer.DynamicLayers
                     , Data.Array.Accelerate.NeuralNet.Layer.StaticLayers
                     , Data.Array.Accelerate.NeuralNet.Layer.LayerCombiners
  build-depends:       base >= 4.7
                     , bytestring
                     , binary
                     , matrix
                     , normaldistribution
                     , random
                     , accelerate
                     , accelerate-arithmetic
                     , accelerate-cuda
                     , accelerate-random
                     , mwc-random
                     , filepath
                     , transformers
                     , mtl
                     , cuda
  default-language:    Haskell2010

executable neural-net
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , neural-net
                     , accelerate
                     , accelerate-cuda
  default-language:    Haskell2010

executable benchmark
  hs-source-dirs:      bench
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:       base
                     , neural-net
                     , accelerate
                     , accelerate-cuda
                     , criterion
  default-language:    Haskell2010

test-suite neural-net-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , neural-net
                     , hspec
                     , QuickCheck
                     , accelerate
                     , accelerate-cuda
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/BlackPinInc/neural-net
